js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
if
(
true
)
new
import
.
source
(
'
<
module
source
>
'
)
;
